2003-11-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-half-dump): Move point to the end of the
	region in order to avoid a bug of `call-process-region' in XEmacs
	21.5.7+ (see the comment).
	(w3m-decode-encoded-contents): Ditto.
	(w3m-x-moe-decode-buffer): Ditto.

	* w3m-perldoc.el (w3m-about-perldoc): Ditto.

	* w3m-xmas.el (w3m-initialize-graphic-icons): Ditto.

	* w3m-favicon.el (w3m-favicon-retrieve): Say "no favicon" if it is
	not available.

	* w3m-proc.el (w3m-process-with-environment): Rely on the
	`temp-directory' function and modify TEMP and TMPDIR env vars for
	XEmacs.

2003-11-20  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-normalize-action): New inline function.
	(w3m-form-parse-and-fontify): Use it.
	(w3m-form-new): Simply set action.
	(w3m-form-submit): Don't treat !CURRENT_URL! here.

2003-11-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_ADD_LOAD_PATH): Refine the help message for the
	--with-attic option.

2003-11-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-buffer-setup): Make sure that `truncate-lines' is t.
	(w3m-view-source): Don't set `truncate-lines' to nil when quitting
	viewing a source.
	(w3m-view-header): Set `truncate-lines' to nil when viewing a
	header.

2003-11-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-put-by-name): New function.
	(w3m-form-resume): Use w3m-form-get-by-name and w3m-form-put-by-name
	instead of w3m-form-get and w3m-form-put for radio buttons.
	(w3m-form-parse-and-fontify): Ditto.
	(w3m-form-input-radio): Ditto.

2003-11-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-check-current-position): Don't allow horizontal
	scrolling when `truncate-lines' is nil.
	(w3m-view-source): Set `truncate-lines' to nil.

	* w3m-favicon.el (w3m-favicon-setup): Retrieve favicon even when
	viewing the header or the page source.

2003-11-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (very-slow): Fix echo messages.
