@@ -487,10 +487,11 @@ BEG and END should be an HTTP response header region on current buffer."
 		 "; "))))
 
 ;;;###autoload
-(defun w3m-cookie (&optional no-cache)
+(defun w3m-cookie (&optional no-cache interactive-p)
   "Cookie setup."
-  (interactive "P")
-  (w3m-goto-url "about://cookie/" no-cache))
+  (interactive (list current-prefix-arg t))
+  (w3m-goto-url "about://cookie/" no-cache
+		nil nil nil nil nil interactive-p))
 
 ;;;###autoload
 (defun w3m-about-cookie (url &optional no-decode no-cache post-data &rest args)
